Fix NSE option expiry calculation, monthly symbol format, and spot/futures price fetcher for live market parity detection